MD Extensions: change guest mode messaging

Bug: 763472
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I4fa187701c831d98ece924f5de1a4d84cbe76cf8