ui/webui/resources/cr_elements/cr_toolbar/cr_toolbar.js
@@ -35,6 +35,9 @@ Polymer({
       value: false,
     },
 
+    // Controls whether the search field is shown.
+    showSearch: {type: Boolean, value: true},
+
     // True when the toolbar is displaying in narrow mode.
     narrow: {
       type: Boolean,
